layout issues about page

--- a/css/about.css
+++ b/css/about.css
@@ -86,14 +86,6 @@ header a {
     padding: 20px; 
 }
 
-.container {
-    width: 800px;
-    margin: 0 auto;
-}
-
-.jumbo {
-    margin-bottom: 20px;
-}
 
 hr {
         border: 1px dashed gray;
@@ -103,159 +95,9 @@ hr {
         margin-bottom: 5%;
 }
 
-.top-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-    text-align: left;
-  
-}
-
-.top-content .text-container {
-    width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
-}
-
-.middle-content {
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
-
-.middle-content h2 {
-    padding: 0 2%;
-    margin-bottom: 0;
-}
-
-.middle-content .boxes {
-    display: flex;
-    flex-wrap: wrap;
-    flex-flow: row-wrap;
-    justify-content: space-evenly;
-    align-content: center;
-    text-align: center;
-    margin: 10px;
-    padding: 10px;
-    color: white;
-    
-}
-
-.middle-content .boxes .box {
-    width: 20.5%;
-    height: 100px;
-    background: black;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
-
-.box1 {
-    background-color: teal;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-    
-}
-
-.box2 {
-    background-color: gold;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-   
-}
-
-.box3 {
-    background-color: cadetblue;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-   
-}
-
-.box4 {
-    background-color: coral;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-  
-}
-
-.box5 {
-    background-color: crimson;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-    
-}
-
-.box6 {
-    background-color: forestgreen;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-   
-}
-
-.box7 {
-    background-color: darkorchid;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
- 
-}
-
-.box8 {
-    background-color: hotpink;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-    
-}
-
-.box9 {
-    background-color: indigo;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-   
-}
-
-.box10 {
-    background-color: dodgerblue;
-    margin: 20px;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-   
-}
-
-.bottom-content {
-    display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
-}
-
-.bottom-content .text-container {
-    padding-right: 4%;
-}
-
-.bottom-content .text-container:last-child {
-    padding-right: 0;
+.container {
+    width: 800px;
+    margin: 0 auto;
 }
 
 button {
@@ -265,22 +107,29 @@ button {
     font-size: 90%;
 }
 
+.about plan {
+    width: 50%;
+}
+
+.about working {
+    width: 50%;
+}
 .container .content {
     display: flex;
     flexwrap: wrap;
     justify-content: space-evenly;
     width: 100%;
-    height: 3000px;
+    height: 400px;
     border: 2px solid blue;
 }
 
-.strategy {
+.container .content .strategy {
     display: flex;
     flexwrap: wrap;
     margin: 10px;
     padding: 10px;
     width: 50%;
-    height: 600px;
+    height: 300px;
     border: 2px solid red;
 }
 
@@ -295,18 +144,21 @@ button {
 }
 
 .places {
-    display: flex;
+     display: flex;
     flexwrap: wrap;
     margin: 10px;
     padding: 10px;
-    width: 400px;
-    height: 500px;
+    width: 50%;
+    height: 600px;
     border: 2px solid red;
-}
 
 .collab {
-    width: 100px;
-    height: 100px;
+   display: flex;
+    flexwrap: wrap;
+    margin: 10px;
+    padding: 10px;
+    width: 50%;
+    height: 600px;
     border: 2px solid red;
 }
 
